Revision history for Perl extension Net::Amazon:

0.28 (not yet released)
   (ms) ASIN search can now process several asin numbers with one request.
        Thanks to Dan Kreft <dan@kreft.net> for suggesting this!

0.27 (07/27/2004)
   (ms) Richard Giliam <nirosys@nirostasis.net> added the isbn()
        method to the Book.pm property.
   (ms) Andy Grundman <andy@hybridized.org> provided a patch to 
        enforce Amazon's no-more-than-1-request-per-second rule. 
        A new parameter 'strict' has been added to the Net::Amazon 
        constructor, which will limit the number of requests if 
        set to 1. Defaults to 1.

0.26 (07/07/2004)
   (ms) Added ProductDescription to Properties.pm
   (ms) Applied patch by Robert Rothenberg <wlkngowl@i-2000.com> for 
        Media and NumMedia properties.

0.25 (06/19/2004)
   (ms) Applied patch by Robert Rothenberg <wlkngowl@i-2000.com> to
        Properties.pm that returns the browse_nodes (categories) for 
        a result.
   (ms) Dave Holland <dave@biff.org.uk> suggested to provide access
        to the user agent's proxy settings. Now, proxy settings via
        environment variables are supported (env_proxy()) as well as
        passing Net::Amazon->new(); a prepped LWP::UserAgent instance
        via the 'ua' parameter (see docs).
   (ms) Accessors are no longer created in the constructors, but on the
        package level. Thanks to tony@tmtm.com who reported this to the
        CPAN bug tracker.
   
0.24 (06/10/2004)
   (ms) Fixed test bug in 007Manufacturer.t
   (ms) Applied patch by Steve Rushe <steve@deeden.co.uk> for book->binding()

0.23 (06/06/2004)
   (ms) Evaldas Imbrasas <evaldas@wolfram.com> suggested to add SalesRank
        to Properties.pm -- added field and test case.
   (ms) Added eg/dejazz, a sample program to retrieve the 10 best-selling
        jazz CDs in Germany, as presented by an article in iX magazine.

0.22 (05/09/2004)