@@ -4,6 +4,9 @@ package Net::Amazon::Response::Blended;
 use base qw(Net::Amazon::Response);
 
 use Net::Amazon::Property;
+use XML::Simple;
+
+our @FORCE_ARRAY_FIELDS = qw(ProductLine);
 
 ##################################################
 sub new {
@@ -54,6 +57,15 @@ sub xmlref_add {
     }
 
     return $nof_items_added;
+}
+
+##################################################
+sub xml_parse {
+##################################################
+    my($self, $xml) = @_;
+
+    my $xs = XML::Simple->new();
+    return $xs->XMLin($xml, ForceArray => [ @FORCE_ARRAY_FIELDS ]);
 }
 
 1;
