@@ -3,6 +3,14 @@ Revision history for Perl extension Net::Amazon:
 0.28 (not yet released)
    (ms) ASIN search can now process several asin numbers with one request.
         Thanks to Dan Kreft <dan@kreft.net> for suggesting this!
+   (ms) Tatsuhiko Miyagawa <miyagawa@livedoor.jp> provided a patch for
+        load errors on search(blended => ...), a fix for a bug with
+        single/multiple ProductLine(s), and a suggestion for using
+        ForceArray which XML::Simple. Added test cases for this patch.
+   (ms) Added xml_parse() method to Net::Amazon::Response which Net::Amazon
+        now calls to parse the XML coming back. This enables the response
+        class (which can override it) to creatively interpret the 
+        response XML to form the response data structure.
 
 0.27 (07/27/2004)
    (ms) Richard Giliam <nirosys@nirostasis.net> added the isbn()
